@@ -1,3 +1,8 @@
+2010-09-06  Pedro Alves  <pedro@codesourcery.com>
+
+	* infrun.c (resume): Extend comment on ignoring single-step
+	requests on vfork parents waiting for a vfork-done.
+
 2010-09-06  Jan Kratochvil  <jan.kratochvil@redhat.com>
 	    Pedro Alves  <pedro@codesourcery.com>
 
